# rcoin

./: Cargo.toml
scripts/: install-hooks.sh  pre-commit.sh
src/: block_chain.rs  error.rs  lib.rs  main.rs
tests/: cli.rs
