[package]
name = "rcoin"
version = "0.1.0"
authors = ["SeÌbastien Boulet <sebastien.boulet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.0"
warp = "0.1.20"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
pretty_env_logger = "0.3.1"
#tokio = { version = "0.2.1", features = ["net", "macros", "sync"] }
#tokio = { version = "0.2.1", features = ["rt-core", "rt-threaded", "macros", "sync"] }
tokio = { version = "0.2.1", features = ["full"] }
futures = "0.1"
#futures-util = "=0.3.0"
reqwest = "0.9.22"


[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
