[package]
name = "rcoin"
version = "0.1.0"
authors = ["SeÌbastien Boulet <sebastien.boulet@gmail.com>"]
edition = "2018"

[dependencies]
sha2 = "0.8.0"
warp = "0.1.20"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
pretty_env_logger = "0.3.1"
log = "0.4.8"
futures = "0.1"
structopt = "0.3.5"
tungstenite = "0.9.2"
tokio = { version = "0.2.1", features = ["full"] }
tokio-tungstenite = "0.9.0"
url = "2.1.0"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
reqwest = "0.9.22"
